--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,3 +15,6 @@ $color-border: rgba(#fff, .1);
 
 $color-border-input: #aaa;
 $color-border-input-active: lighten(#ddd, 10%);
+
+
+$z-index-tooltip: 100;
